# differential_growth

./: .gitmodules  CMakeLists.txt  configure.sh  debug.sh  gdb.sh  release.sh
src/: app.c  app.h  config.h  main.c  math.c  math.h  particle.c  particle.h  render.c  render.h  simulation.c  simulation.h
